force-app/main/default/objects/custom_create75__c/custom_create75__c.object-meta.xml
<CustomObject>
    <label>Custom created object75</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects75</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>