force-app/main/default/objects/custom_create75__c/fields/custom_create_75field532__c.field-meta.xml
<CustomField>
    <fullName>custom_create_75field532__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 75field532</label>
    <type>Checkbox</type>
</CustomField>